--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,9 +1,13 @@
 @import '~bootstrap/scss/bootstrap';
+@import 'colors.scss';
 @import url('https://fonts.googleapis.com/css?family=Arvo|Varela+Round');
 
 .navbar,
 .user-panel {
-  background-color: #3c2a3b;
+  background-color: $navbar-maroon;
+  legend {
+    color: white;
+  }
 }
 
 .site-name {
