--- a/assets/scripts/templates/helpers/index.handlebars
+++ b/assets/scripts/templates/helpers/index.handlebars
@@ -3,9 +3,13 @@
       <div class="all-items" data-id="{{_id}}">
         <h4>{{title}} -- {{text}}</h4>
         <form class="text-update" data-id="{{_id}}">
-          <input required minlength='1' class="update-text-form-{{_id}}" type="text" placeholder="New Caption" data-id="{{_id}}">
+          <input required minlength='1' class="update-text-form-{{_id}}" type="text" placeholder="New Description" data-id="{{_id}}">
           <input class="update-text-btn" type="submit" name="item[text]" value="Update" data-id="{{_id}}">
         </form>
+        <!-- <form class="title-update" data-id="{{_id}}">
+          <input required minlength='1' class="update-text-form-{{_id}}" type="text" placeholder="New Title" data-id="{{_id}}">
+          <input class="update-text-btn" type="submit" name="item[title]" value="Update" data-id="{{_id}}">
+        </form> -->
         <button type="button" name="remove" class="item-remove-btn">Remove</button>
       </div>
   {{/items}}
