added a strike through feature when a item is completed
-dynamically updates

--- a/assets/scripts/templates/helpers/index.handlebars
+++ b/assets/scripts/templates/helpers/index.handlebars
@@ -1,7 +1,7 @@
 {{#each this as |items|}}
   {{#items}}
       <div class="all-items" data-id="{{_id}}">
-        <h4>{{title}} -- {{text}}</h4>
+        <h4 class="strike blah-{{_id}}" id="strike-{{_id}}">{{title}} -- {{text}}</h4>
         <form class="text-update" data-id="{{_id}}">
           <input required minlength='1' class="update-text-form-{{_id}}" type="text" placeholder="New Description" data-id="{{_id}}">
           <input class="update-text-btn" type="submit" name="item[text]" value="Update" data-id="{{_id}}">
@@ -11,6 +11,7 @@
           <input class="update-title-btn" type="submit" name="item[title]" value="Update" data-id="{{_id}}">
         </form>
         <button type="button" name="remove" class="item-remove-btn">Remove</button>
+        <button type="button" name="complete" class="item-complete-btn">Completed</button>
       </div>
   {{/items}}
 {{/each}}
