add a update button in handlebars that will toggle to show update form.

--- a/assets/scripts/templates/helpers/index.handlebars
+++ b/assets/scripts/templates/helpers/index.handlebars
@@ -1,18 +1,25 @@
 {{#each this as |items|}}
   {{#items}}
-  <div class="card text-white  mb-3">
+  <div class="card text-white  mb-3" data-id="{{_id}}">
       <div class="all-items" data-id="{{_id}}">
-        <h4 class="strike blah-{{_id}}" id="strike-{{_id}}"><em>{{title}}</em><br> -- <i>{{text}}</i></h4>
-        <form class="title-update" data-id="{{_id}}">
-          <input required minlength='1' class="update-title-form-{{_id}}" type="text" placeholder="New Title" data-id="{{_id}}">
-          <input class="form-btn update-title-btn" type="submit" name="item[title]" value="Update" data-id="{{_id}}">
-        </form>
-        <form class="text-update" data-id="{{_id}}">
-          <input required minlength='1' class="update-text-form-{{_id}}" type="text" placeholder="New Description" data-id="{{_id}}">
-          <input class="form-btn update-text-btn" type="submit" name="item[text]" value="Update" data-id="{{_id}}">
-        </form>
+        <h4 class="strike blah-{{_id}}" id="strike-{{_id}}"><span class="list-title">{{title}}</span> : <span class="list-text">{{text}}</span></h4>
+
+        <div class="lala-{{_id}} hidden" data-id="{{_id}}">
+          <form class="title-update " data-id="{{_id}}">
+            <input required minlength='1' maxlength="150" class="update-title-form-{{_id}}" type="text" placeholder="New Title" data-id="{{_id}}">
+            <input class="form-btn update-title-btn" type="submit" name="item[title]" value="Update" data-id="{{_id}}">
+          </form>
+
+          <form class="text-update " data-id="{{_id}}">
+            <input required minlength='1' maxlength="150" class="update-text-form-{{_id}}" type="text" placeholder="New Description" data-id="{{_id}}">
+            <input class="form-btn update-text-btn" type="submit" name="item[text]" value="Update" data-id="{{_id}}">
+          </form>
+        </div>
+
+        <button type="button" name="button" class="item-update-btn" data-id={{_id}}>Update Your Dream</button>
         <button type="button" name="remove" class="item-remove-btn">Remove</button>
         <button type="button" name="complete" class="item-complete-btn">Completed</button>
+
       </div>
     </div>
   {{/items}}
