--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -126,6 +126,10 @@ textarea:focus {
   margin-top: 10px;
 }
 
+.message-box {
+  margin-top: 10px;
+}
+
 .disclaimer {
     font-size: 16px;
     margin-top: 10px;
@@ -136,6 +140,12 @@ textarea:focus {
     background-color: #3e3d54;
   }
 
-  h4 {
-    font-size: 20px;
+  .list-title {
+    font-size: 18px;
+    text-transform: uppercase;
+  }
+
+  .list-text {
+    font-size: 16px;
+
   }
