--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -147,5 +147,26 @@ textarea:focus {
 
   .list-text {
     font-size: 16px;
+  }
 
+  .lala- {
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+
+  .title-update,
+  .text-update {
+    width: 50%;
+    margin: 5px auto 15px auto;
+  }
+
+  .btn-group {
+    margin-bottom: 5px;
+  }
+
+  .item-update-btn,
+  .item-remove-btn,
+  .item-complete-btn {
+    margin: 0 5px 0 5px;
   }
