uncommented item complete portion of the code to make item complete strike through working again

--- a/assets/scripts/templates/helpers/index.handlebars
+++ b/assets/scripts/templates/helpers/index.handlebars
@@ -18,8 +18,8 @@
 
         <div class="btn-group" data-id="{{_id}}">
           <button type="button" name="button" class="item-update-btn" data-id={{_id}}>Update Your Dream</button>
-          <button type="button" name="remove" class="item-remove-btn">Remove</button>
-          <button type="button" name="complete" class="item-complete-btn">Completed</button>
+          <button type="button" name="remove" class="item-remove-btn" data-id={{_id}}>Remove</button>
+          <button type="button" name="complete" class="item-complete-btn" data-id={{_id}}>Complete</button>
         </div>
 
       </div>
