--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -85,6 +85,8 @@ textarea:focus {
     background-color: #4CAF50; /* Green */
     height: 30px;
     border: none;
+    // border-style: groove;
+    border-color: white;
     border-radius: 5px;
     color: white;
     text-align: center;
