--- a/assets/scripts/templates/helpers/index.handlebars
+++ b/assets/scripts/templates/helpers/index.handlebars
@@ -17,9 +17,9 @@
         </div>
 
         <div class="btn-group" data-id="{{_id}}">
-          <button type="button" name="button" class="item-update-btn" data-id={{_id}}>Update Your Dream</button>
-          <button type="button" name="remove" class="item-remove-btn" data-id={{_id}}>Remove</button>
-          <button type="button" name="complete" class="item-complete-btn" data-id={{_id}}>Complete</button>
+          <button type="button" name="button" class="item-btn item-update-btn" data-id={{_id}}>Update Your Dream</button>
+          <button type="button" name="remove" class="item-btn item-remove-btn" data-id={{_id}}>Delete Dream</button>
+          <button type="button" name="complete" class="item-btn item-complete-btn" data-id={{_id}}>Cross Off Dream</button>
         </div>
 
       </div>
