--- a/assets/scripts/templates/helpers/index.handlebars
+++ b/assets/scripts/templates/helpers/index.handlebars
@@ -17,7 +17,7 @@
         </div>
 
         <div class="btn-group" data-id="{{_id}}">
-          <button type="button" name="button" class="item-btn item-update-btn" data-id={{_id}}>Update Your Dream</button>
+          <button type="button" name="button" class="xxx item-btn item-update-btn-{{_id}}" data-id={{_id}}>Update Your Dream</button>
           <button type="button" name="remove" class="item-btn item-remove-btn" data-id={{_id}}>Delete Dream</button>
           <button type="button" name="complete" class="item-btn item-complete-btn" data-id={{_id}}>Cross Off Dream</button>
         </div>
