--- a/assets/scripts/templates/helpers/index.handlebars
+++ b/assets/scripts/templates/helpers/index.handlebars
@@ -1,7 +1,7 @@
 {{#each this as |items|}}
   {{#items}}
-  <div class="card text-white  mb-3" data-id="{{_id}}">
-      <div class="all-items" data-id="{{_id}}">
+  <div class="haha-{{_id}} card text-white  mb-3" data-id="{{_id}}">
+      <div class="all-items-{{_id}}" data-id="{{_id}}">
         <h4 class="strike blah-{{_id}}" id="strike-{{_id}}"><span class="list-title">{{title}}</span> : <span class="list-text">{{text}}</span></h4>
 
         <div class="lala-{{_id}} hidden" data-id="{{_id}}">
