more styling and refactor

--- a/assets/scripts/templates/helpers/index.handlebars
+++ b/assets/scripts/templates/helpers/index.handlebars
@@ -16,6 +16,7 @@
           </form>
         </div>
 
+        <!-- Each item list will have 3 buttons with proper ID that is linked to that specific item list -->
         <div class="btn-group" data-id="{{_id}}">
           <button type="button" name="button" class="xxx item-btn item-update-btn-{{_id}}" data-id={{_id}}>Update Your Dream</button>
           <button type="button" name="remove" class="zzz item-btn item-remove-btn-{{_id}}" data-id={{_id}}>Delete Dream</button>
