--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  // background-image: url("public/logo_transparent.png");
+  background-image: url("public/logo_transparent.png");
   background-position: center;
   background-size: 40%;
   background-repeat: no-repeat;
